--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Przykład nr tutaj wpisz odpowiedni nume </title>
+		<title>Przykład nr 1</title>
 		<script language="JavaScript">
 			function WinOpen_dabrowski()
 			{
