--- a/okno4.html
+++ b/okno4.html
@@ -3,7 +3,7 @@
 		<title>Obrazek4</title>
 	</head>
 <body>
-	<h1>Twoja stara to twój stary</h1>
+	<h1>Pufff</h1>
 	<img src="magik4.jpg" />
 </body>
 </html>
