--- a/k15.html
+++ b/k15.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Kod15</title>
-		<link rel="stylesheet" type="text/css" href="style.css/kody.css">
+		<link rel="stylesheet" type="text/css" href="kody.css">
 	</head>
 <body>
 	<textarea rows="41" disabled>
