--- a/k13.html
+++ b/k13.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Kod13</title>
-		<link rel="stylesheet" type="text/css" href="kody.css">
+		<link rel="stylesheet" type="text/css" href="dkody.css">
 	</head>
 <body>
 	<textarea rows="41" disabled>
