--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Zadanie-15</title>
+		<title>Zadania 3-23</title>
 		<script type="text/javascript">
 			function WinOpen_dabrowski_1()
 			{
