--- a/index.html
+++ b/index.html
@@ -109,23 +109,40 @@
 			function WinOpen_dabrowski_27()
 			{
 				window.open("k19.html","kod19","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}function WinOpen_dabrowski_28()
+			}
+			function WinOpen_dabrowski_28()
 			{
-				window.open("z21.html","zadanie21","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z20.html","zadanie20","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_29()
 			{
-				window.open("k21.html","kod21","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("k20.html","kod20","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_30()
 			{
-				window.open("z23.html","zadanie23","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z21.html","zadanie21","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_31()
 			{
-				window.open("k23_1.html","kod23_1","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("k21.html","kod21","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_32()
+			{
+				window.open("z22.html","zadanie22","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_33()
+			{
+				window.open("k22.html","kod22","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_34()
+			{
+				window.open("z23.html","zadanie23","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_35()
+			{
+				window.open("k23_1.html","kod23_1","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_36()
 			{
 				window.open("k23_2.html","kod23_2","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
@@ -160,11 +177,15 @@
 		<input type="button" name="przycisk25" value="dabrowski_Zadanie18" onclick="WinOpen_dabrowski_25(' ')">
 		<input type="button" name="przycisk26" value="dabrowski_Zadanie19" onclick="WinOpen_dabrowski_26(' ')">
 		<input type="button" name="przycisk27" value="dabrowski_Kod19" onclick="WinOpen_dabrowski_27(' ')">
-		<input type="button" name="przycisk28" value="dabrowski_Zadanie21" onclick="WinOpen_dabrowski_28(' ')">
-		<input type="button" name="przycisk29" value="dabrowski_Kod21" onclick="WinOpen_dabrowski_29(' ')">
-		<input type="button" name="przycisk30" value="dabrowski_Zadanie23" onclick="WinOpen_dabrowski_30(' ')">
-		<input type="button" name="przycisk31" value="dabrowski_Kod23_1" onclick="WinOpen_dabrowski_31(' ')">
-		<input type="button" name="przycisk32" value="dabrowski_Kod23_2" onclick="WinOpen_dabrowski_32(' ')">
+		<input type="button" name="przycisk28" value="dabrowski_Zadanie20" onclick="WinOpen_dabrowski_28(' ')">
+		<input type="button" name="przycisk29" value="dabrowski_Kod20" onclick="WinOpen_dabrowski_29(' ')">
+		<input type="button" name="przycisk30" value="dabrowski_Zadanie21" onclick="WinOpen_dabrowski_30(' ')">
+		<input type="button" name="przycisk31" value="dabrowski_Kod21" onclick="WinOpen_dabrowski_31(' ')">
+		<input type="button" name="przycisk32" value="dabrowski_Zadanie22" onclick="WinOpen_dabrowski_32(' ')">
+		<input type="button" name="przycisk33" value="dabrowski_Kod22" onclick="WinOpen_dabrowski_33(' ')">
+		<input type="button" name="przycisk34" value="dabrowski_Zadanie23" onclick="WinOpen_dabrowski_34(' ')">
+		<input type="button" name="przycisk35" value="dabrowski_Kod23_1" onclick="WinOpen_dabrowski_35(' ')">
+		<input type="button" name="przycisk36" value="dabrowski_Kod23_2" onclick="WinOpen_dabrowski_36(' ')">
 	</form>
 </body>
 </html>
