--- a/k19.html
+++ b/k19.html
@@ -16,29 +16,29 @@
         <meta name="description" content="Zadanie 19">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script language="JavaScript">
-            function Ob(a,h)
+            function Ob_dabrowski(a,h)
             {
-                a_dab=parseFloat(a);
-                h_dab=parseFloat(h);
+                a_dab=parseFloat(a)
+                h_dab=parseFloat(h)
                 Ob_wynik=(2*a)+(2*h);
                 document.getElementsByName('obwod')[0].value=Ob_wynik.toFixed(2); /* na dokument */
-                alert("Ob= "+Ob_wynik+"cm"); /*do okna Alert */
-                pokaz1.innerHTML="Ob= "+Ob_wynik+" cm"+"<br>"; /* do tabeli */
+                alert("Obwód= "+Ob_wynik+"cm"); /*do okna Alert */
+                wyprowadz_obwod_dab.innerHTML="Obwód= "+Ob_wynik+" cm"+"<br>"; /* do tabeli */
             }
-            function P(a,h)
+            function P_dabrowski(a,h)
             {
-                a_dab=parseFloat(a);
-                h_dab=parseFloat(h);
+                a_dab=parseFloat(a)
+                h_dab=parseFloat(h)
                 P_wynik=a*h;
                 document.getElementsByName('pole')[0].value=P_wynik.toFixed(2); /* na dokument */
-                alert("P= "+P_wynik+" cm^2"); /*do okna Alert */
-                pokaz2.innerHTML="P= "+P_wynik+"cm^2"; /* do tabeli */
+                alert("Pole= "+P_wynik+" cm^2"); /*do okna Alert */
+                wyprowadz_pole_dab.innerHTML="Pole= "+P_wynik+"cm^2"; /* do tabeli */
             }
-            </script>
+        </script>
     </head>
     <body>
         <p>Obliczanie Ob i P prostokąta</p>
-        <form name="formularz" action="..." onsubmit="Ob(this.bok.value,this.wysokosc.value); P(this.bok.value,this.wysokosc.value);return false">
+        <form name="formularz" action="..." onsubmit="Ob_dabrowski(this.bok.value,this.wysokosc.value); P_dabrowski(this.bok.value,this.wysokosc.value);return false">
             Podaj a=
             <input size="6" name="bok">
             Podaj h=
@@ -54,8 +54,8 @@
             <input size="6" name="pole">
         </form>
         <table>
-            <tr id="pokaz1"></tr>
-            <tr id="pokaz2"></tr>
+            <tr id="wyprowadz_obwod_dab"></tr>
+            <tr id="wyprowadz_pole_dab"></tr>
         </table>
     </body>
 </html>
