--- a/index.html
+++ b/index.html
@@ -74,6 +74,78 @@
 			{
 				window.open("z79.html","zadanie79","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
+			function WinOpen_dabrowski_19()
+			{
+				window.open("k62.html","kod62","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_20()
+			{
+				window.open("k63.html","kod63","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_21()
+			{
+				window.open("k64.html","kod64","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_22()
+			{
+				window.open("k65.html","kod65","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_23()
+			{
+				window.open("k66.html","kod66","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_24()
+			{
+				window.open("k67.html","kod67","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_25()
+			{
+				window.open("k68.html","kod68","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_26()
+			{
+				window.open("k69.html","kod69","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_27()
+			{
+				window.open("k70.html","kod70","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_28()
+			{
+				window.open("k71.html","kod71","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_29()
+			{
+				window.open("k72.html","kod72","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_30()
+			{
+				window.open("k73.html","kod73","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_31()
+			{
+				window.open("k74.html","kod74","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_32()
+			{
+				window.open("k75.html","kod75","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_33()
+			{
+				window.open("k76.html","kod76","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_34()
+			{
+				window.open("k77.html","kod77","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_35()
+			{
+				window.open("k78.html","kod78","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_36()
+			{
+				window.open("k79.html","kod79","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
 		</script>
 	</head>
 <body>
@@ -100,5 +172,26 @@
 		<input type="button" name="przycisk78" value="dabrowski_Zadanie78" onclick="WinOpen_dabrowski_17(' ')">
 		<input type="button" name="przycisk79" value="dabrowski_Zadanie79" onclick="WinOpen_dabrowski_18(' ')">
 	</form>
+	<br>
+	<from>
+		<input type="button" name="przycisk62_1" value="dabrowski_Kod62" onclick="WinOpen_dabrowski_19(' ')">
+		<input type="button" name="przycisk63_1" value="dabrowski_Kod63" onclick="WinOpen_dabrowski_20(' ')">
+		<input type="button" name="przycisk64_1" value="dabrowski_Kod64" onclick="WinOpen_dabrowski_21(' ')">
+		<input type="button" name="przycisk65_1" value="dabrowski_Kod65" onclick="WinOpen_dabrowski_22(' ')">
+		<input type="button" name="przycisk66_1" value="dabrowski_Kod66" onclick="WinOpen_dabrowski_23(' ')">
+		<input type="button" name="przycisk67_1" value="dabrowski_Kod67" onclick="WinOpen_dabrowski_24(' ')">
+		<input type="button" name="przycisk68_1" value="dabrowski_Kod68" onclick="WinOpen_dabrowski_25(' ')">
+		<input type="button" name="przycisk69_1" value="dabrowski_Kod69" onclick="WinOpen_dabrowski_26(' ')">
+		<input type="button" name="przycisk70_1" value="dabrowski_Kod70" onclick="WinOpen_dabrowski_27(' ')">
+		<input type="button" name="przycisk71_1" value="dabrowski_Kod71" onclick="WinOpen_dabrowski_28(' ')">
+		<input type="button" name="przycisk72_1" value="dabrowski_Kod72" onclick="WinOpen_dabrowski_29(' ')">
+		<input type="button" name="przycisk73_1" value="dabrowski_Kod73" onclick="WinOpen_dabrowski_30(' ')">
+		<input type="button" name="przycisk74_1" value="dabrowski_Kod74" onclick="WinOpen_dabrowski_31(' ')">
+		<input type="button" name="przycisk75_1" value="dabrowski_Kod75" onclick="WinOpen_dabrowski_32(' ')">
+		<input type="button" name="przycisk76_1" value="dabrowski_Kod76" onclick="WinOpen_dabrowski_33(' ')">
+		<input type="button" name="przycisk77_1" value="dabrowski_Kod77" onclick="WinOpen_dabrowski_34(' ')">
+		<input type="button" name="przycisk78_1" value="dabrowski_Kod78" onclick="WinOpen_dabrowski_35(' ')">
+		<input type="button" name="przycisk79_1" value="dabrowski_Kod79" onclick="WinOpen_dabrowski_36(' ')">
+	</from>
 </body>
 </html>
