--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
+<html lang="pl">
 <html>
 	<head>
-		<title>Zadania 62-79</title>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Zadania 24-28</title>
+		<meta name="author" content="Jakub Dąbrowski">
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<script type="text/javascript">
 			function WinOpen_dabrowski_1()
 			{
