--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Zadania 24-28</title>
 		<meta name="author" content="Jakub Dąbrowski">
-		<meta name="description" content="">
+		<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<script type="text/javascript">
 			function WinOpen_dabrowski_1()
