--- a/index.html
+++ b/index.html
@@ -10,23 +10,43 @@
 		<script type="text/javascript">
 			function WinOpen_dabrowski_1()
 			{
-				window.open("z62.html","zadanie62","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z24.html","zadanie24","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_1_1()
+			{
+				window.open("k24.html","kod24","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_2()
 			{
-				window.open("z63.html","zadanie63","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z25.html","zadanie25","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_2_1()
+			{
+				window.open("k25.html","kod25","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_3()
 			{
-				window.open("z64.html","zadanie64","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z26.html","zadanie26","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_3_1()
+			{
+				window.open("k26.html","kod26","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_4()
 			{
-				window.open("z65.html","zadanie65","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z27.html","zadanie27","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_4_1()
+			{
+				window.open("k27.html","kod27","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 			function WinOpen_dabrowski_5()
 			{
-				window.open("z66.html","zadanie66","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+				window.open("z28.html","zadanie28","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+			}
+			function WinOpen_dabrowski_5_1()
+			{
+				window.open("k28.html","kod28","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
 			}
 		</script>
 	</head>
@@ -35,19 +55,19 @@
 	<br>
 	<br>
 	<form>
-		<input type="button" name="przycisk62" value="dabrowski_Zadanie62" onclick="WinOpen_dabrowski_1(' ')">
-		<input type="button" name="przycisk63" value="dabrowski_Zadanie63" onclick="WinOpen_dabrowski_2(' ')">
-		<input type="button" name="przycisk64" value="dabrowski_Zadanie64" onclick="WinOpen_dabrowski_3(' ')">
-		<input type="button" name="przycisk65" value="dabrowski_Zadanie65" onclick="WinOpen_dabrowski_4(' ')">
-		<input type="button" name="przycisk66" value="dabrowski_Zadanie66" onclick="WinOpen_dabrowski_5(' ')">
+		<input type="button" name="przycisk1" value="dabrowski_Zadanie24" onclick="WinOpen_dabrowski_1(' ')">
+		<input type="button" name="przycisk2" value="dabrowski_Zadanie25" onclick="WinOpen_dabrowski_2(' ')">
+		<input type="button" name="przycisk3" value="dabrowski_Zadanie26" onclick="WinOpen_dabrowski_3(' ')">
+		<input type="button" name="przycisk4" value="dabrowski_Zadanie27" onclick="WinOpen_dabrowski_4(' ')">
+		<input type="button" name="przycisk5" value="dabrowski_Zadanie28" onclick="WinOpen_dabrowski_5(' ')">
 	</form>
 	<br>
 	<from>
-		<input type="button" name="przycisk62_1" value="dabrowski_Kod62" onclick="WinOpen_dabrowski_19(' ')">
-		<input type="button" name="przycisk63_1" value="dabrowski_Kod63" onclick="WinOpen_dabrowski_20(' ')">
-		<input type="button" name="przycisk64_1" value="dabrowski_Kod64" onclick="WinOpen_dabrowski_21(' ')">
-		<input type="button" name="przycisk65_1" value="dabrowski_Kod65" onclick="WinOpen_dabrowski_22(' ')">
-		<input type="button" name="przycisk66_1" value="dabrowski_Kod66" onclick="WinOpen_dabrowski_23(' ')">
+		<input type="button" name="przycisk24_1" value="dabrowski_Kod24" onclick="WinOpen_dabrowski_1_1(' ')">
+		<input type="button" name="przycisk25_1" value="dabrowski_Kod25" onclick="WinOpen_dabrowski_2_1(' ')">
+		<input type="button" name="przycisk26_1" value="dabrowski_Kod26" onclick="WinOpen_dabrowski_3_1(' ')">
+		<input type="button" name="przycisk27_1" value="dabrowski_Kod27" onclick="WinOpen_dabrowski_4_1(' ')">
+		<input type="button" name="przycisk28_1" value="dabrowski_Kod28" onclick="WinOpen_dabrowski_5_1(' ')">
 	</from>
 </body>
 </html>
