--- a/index.html
+++ b/index.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
 <html lang="pl">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Zadania 24-28</title>
-		<meta name="author" content="Jakub Dąbrowski">
-		<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
-		<script type="text/javascript">
-			function WinOpen_dabrowski_1()
-			{
-				window.open("z24.html","zadanie24","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_1_1()
-			{
-				window.open("k24.html","kod24","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_2()
-			{
-				window.open("z25.html","zadanie25","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_2_1()
-			{
-				window.open("k25.html","kod25","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_3()
-			{
-				window.open("z26.html","zadanie26","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_3_1()
-			{
-				window.open("k26.html","kod26","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_4()
-			{
-				window.open("z27.html","zadanie27","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_4_1()
-			{
-				window.open("k27.html","kod27","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_5()
-			{
-				window.open("z28.html","zadanie28","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-			function WinOpen_dabrowski_5_1()
-			{
-				window.open("k28.html","kod28","toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
-			}
-		</script>
-	</head>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Zadania 24-28</title>
+	<meta name="author" content="Jakub Dąbrowski">
+	<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript">
+		function WinOpen_dabrowski_1() {
+			window.open("z24.html", "zadanie24", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_1_1() {
+			window.open("k24.html", "kod24", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_2() {
+			window.open("z25.html", "zadanie25", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_2_1() {
+			window.open("k25.html", "kod25", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_3() {
+			window.open("z26.html", "zadanie26", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_3_1() {
+			window.open("k26.html", "kod26", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_4() {
+			window.open("z27.html", "zadanie27", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_4_1() {
+			window.open("k27.html", "kod27", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_5() {
+			window.open("z28.html", "zadanie28", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+		function WinOpen_dabrowski_5_1() {
+			window.open("k28.html", "kod28", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
+		}
+	</script>
+</head>
+
 <body>
-	<center><h1>Jakub Dąbrowski 3G</h1></center>
+	<center>
+		<h1>Jakub Dąbrowski 3G</h1>
+	</center>
 	<br>
 	<br>
 	<form>
@@ -70,4 +64,5 @@
 		<input type="button" name="przycisk28_1" value="dabrowski_Kod28" onclick="WinOpen_dabrowski_5_1(' ')">
 	</from>
 </body>
+
 </html>
