--- a/z24.html
+++ b/z24.html
@@ -1,56 +1,61 @@
-<html>
-	<head>
-		<title>Zadanie3</title>
-        <link href="style.css/z3.css" rel="stylesheet" type="text/css">
-	</head>
+<!DOCTYPE html>
+<html lang="pl">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Zadanie24</title>
+    <meta name="author" content="Jakub Dąbrowski">
+    <meta name="description" content="Zadanie 24">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
+</head>
+
 <body>
-	<p>
-		<h3>Rodzaje okienek:</h3>
-		<ul>
-			<li>Okienko <b>alert</b> – wyświetlająca okienko dialogowe z informacją i przyciskiem OK,</li>
-			<li>Okienko <b>prompt</b> – generująca okno, w którym użytkownik może wpisać wartość, zwracaną następnie do programu,</li>
-			<li>Okienko <b>confirm</b> służy do tego, aby użytkownik coś potwierdził (stąd nazwa confirm).</li>
-		</ul>
-	</p>
-	<p>
-		<h3>Przy nadawaniu nazw zmiennym należy przestrzegać pewnych zasad:</h3>
-		<ol>
-			<li>Nazwa zmiennej musi się zaczynać od litery, znaku "$" lub "_", może zawierać tylko litery (bez polskich znaków), cyfry oraz "$" i "_".</li>
-            <u>Poprawne nazwy zmiennych:</u> zmienna1, $wynik, _rozmiar, wynik1, Rekord, $_gracz
-            <br>
-			<u>Błędne nazwy zmiennych:</u> 1zmienna, wynik gry, wysokosc&szerokosc, wynik.rekord, &gracz, wysokość, imie+nazwisko.
-			<li>Wielkość liter ma znaczenie.</li>
-            <u>Rekord i rekord to dwie różne zmienne!</u> Jest to bardzo częsta przyczyna błędów w kodzie początkujących programistów.
-			<li>Należy nie używać słów kluczowych JavaScript jako nazw zmiennych.</li>
-		</ol>
-	</p
-    <p>
-        <h3>Typy zmiennych w Javascript</h3>
-        <br>
-        W JavaScript nie ma możliwości definiowania różnych typów zmiennych tak jak w C++, typy zmiennych są definiowane w trakcie ich przypisywania.
-        <br>
-        Podstawowe zmienne liczbowe w JavaScript to:
-        <ul style="list-style: none;">
-            <li>Number <b>&xrarr;</b> Typ liczbowy</li>
-            <ul>
-                <li>zmienna całkowite</li>
-                <li>zmiennoprzecinkowe</li>
-            </ul>
-            <li>String <b>&xrarr;</b> Typ tekstowy</li>
-            <li>Boolea <b>&xrarr;</b> Typ logiczny</li>
-            <li>Null <b>&xrarr;</b> Pusta zawartość</li>
-            <li>Undefined <b>&xrarr;</b> Typ niezidentyfikowany</li>
-            <li>Object <b>&xrarr;</b> Obiekt</li>
-        </ul>
-    </p>
-    <h3>Konwersji zmiennych</h3>
-    <p>
-        Wczytanie zmiennej z użyciem <b>prompt</b> wykonywane jest jako ciąg znaków dlatego konieczna jest konwersji z ciągu znaków na wartości liczbowe aby wykonywac obliczenia.
-        <ul style="list-style: none;">
-            <li><u>parseFloat(zmienna)</u> - konwersja zmiennej do typu float</li>
-            <li><u>parseInt(zmienna)</u> - konwersja zmiennej do typu int (liczbowego)</li>
-            <li><u>toString(zmienna)</u> - konwersja zmiennej do typu łańcuchowego</li>
-        </ul>
-    </p>
+    <p>===========================================================================</p>
+        <h1><u>Rodzaje „filozofii-paradygmatów” programowania:</u></h1>
+        <ol>
+            <li>Programowanie strukturalne</li>
+            <li>Programowanie obiektowe</li>
+        </ol>
+    <p>===========================================================================</p>
+    <h1><u>Programowanie strukturalne</u></h1>
+    Jest to paradygmat programowania opierający się na podziale kodu źródłowego programu na procedury i hierarchicznie ułożone bloki
+    z wykorzystaniem struktur kontrolnych w postaci instrukcji wyboru i pętli. Programowanie strukturalne zwiększa czytelność i ułatwia analizę programów,
+    co stanowi znaczącą poprawę w stosunku do trudnego w utrzymaniu „<b>spaghetti code</b>” często wynikającego z użycia <b>instrukcji goto</b>.
+    <h2><u>Założenia programowania strukturalnego</u></h2>
+    <ol>
+        <li>Podzielone bloki kodu mają jeden punkt wejścia (mogą mieć wiele punktów wyjścia),</li>
+        <li>Wykonywanie wyrażeń w określonej kolejności,</li>
+        <li>Używanie instrukcji warunkowych (if, if else),</li>
+        <li>Używanie pętli (for, while, do while),</li>
+        <li>Unikanie instrukcji skoku (goto),</li>
+        <li>Unikanie instrukcji break, continua,</li>
+        <li>W <u>programowaniu proceduralnym</u> (strukturalne) funkcje i zmienne opisujące dany przedmiot nie są ze sobą powiązane.</li>
+    </ol>
+    <p>===========================================================================</p>
+    <h1><u>Opis programowania obiektowego</u></h1>
+    <i>Krótki opis.</i><br>
+    Programowanie obiektowe jest to podejście bardziej naturalne dla ludzi, bardziej zgodne z rzeczywistością. W pamięci
+    komputera tworzona jest wirtualna rzeczywistość.
+    Definiowane (powoływane są do wirtualnego życia w pamięci komputera) obiekty na podstawie wcześniej zdefiniowanych klas.
+    Obiekty mają zdefiniowane metody oraz pola.
+    <h2><u>Programowanie obiektowe definicja:</u></h2>
+    Programowanie obiektowe (ang. object-oriented programming) — sposób programowania, w którym programy definiuje się za
+    pomocą:
+    <ul>
+        <li><b>obiektów</b> (obiekty powoływane są do życia wirtualnego przez programistę, mogą być kasowane przez
+            programistę) np. okienka w Windows→okienko jest obiektem,</li>
+        <li>
+            obiekt ma jakiś stan (czyli dane, w programowaniu obiektowym nazywane najczęściej polami) np. wielość okienka w
+            Windows,</li>
+        <li>
+            obiekt wykazuje pewne zachowanie (czyli posiada pewne procedury w programowaniu obiektowym nazywane metody). Np.
+            jest zdefiniowana metoda do zmiany wielkości okienka.
+            Czyli obiektowy program komputerowy wyrażony jest jako zbiór takich obiektów, komunikujących się pomiędzy sobą w
+            celu wykonywania zadań.
+        </li>
+    </ul>
 </body>
+
 </html>
