--- a/k24.html
+++ b/k24.html
@@ -2,6 +2,21 @@
 <html lang="pl">
 
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Kod 24</title>
+	<meta name="author" content="Jakub Dąbrowski">
+	<meta name="description" content="Kod do zadania 24">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css/kody.css">
+</head>
+
+<body>
+	<textarea rows="165" disabled>
+<!DOCTYPE html>
+<html lang="pl">
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zadanie 24</title>
@@ -130,6 +145,10 @@
         </li>
     </ul>
     <p>===========================================================================</p>
+</body>
+
+</html>
+	</textarea>
 </body>
 
 </html>
