--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css/index.css">
 	<script type="text/javascript">
 		function WinOpen_dabrowski_1() {
 			window.open("z24.html", "zadanie24", "toolbar=no,directories=no,menubar=no,height=800,width=900,top=300,left=500");
@@ -43,19 +44,16 @@
 </head>
 
 <body>
-	<center>
-		<h1>Jakub Dąbrowski 3G</h1>
-	</center>
-	<br>
-	<br>
-	<form>
+	<h1>Jakub Dąbrowski 3G</h1>
+	<h2>Zadania</h2>
+	<form >
 		<input type="button" name="przycisk1" value="dabrowski_Zadanie24" onclick="WinOpen_dabrowski_1(' ')">
 		<input type="button" name="przycisk2" value="dabrowski_Zadanie25" onclick="WinOpen_dabrowski_2(' ')">
 		<input type="button" name="przycisk3" value="dabrowski_Zadanie26" onclick="WinOpen_dabrowski_3(' ')">
 		<input type="button" name="przycisk4" value="dabrowski_Zadanie27" onclick="WinOpen_dabrowski_4(' ')">
 		<input type="button" name="przycisk5" value="dabrowski_Zadanie28" onclick="WinOpen_dabrowski_5(' ')">
 	</form>
-	<br>
+	<h2>Kody</h2>
 	<from>
 		<input type="button" name="przycisk24_1" value="dabrowski_Kod24" onclick="WinOpen_dabrowski_1_1(' ')">
 		<input type="button" name="przycisk25_1" value="dabrowski_Kod25" onclick="WinOpen_dabrowski_2_1(' ')">
