--- a/k26.html
+++ b/k26.html
@@ -28,7 +28,7 @@
         {
             rodzaj: 'Krzesło',
             material: 'Dąb',
-            kolor: 'czarny',
+            kolor: 'Czarny',
             Mebel_wyswietl_dabrowski: function () 
             {
                 document.write(this.rodzaj +', '+ this.material +', '+ this.kolor)
