--- a/z26.html
+++ b/z26.html
@@ -13,7 +13,7 @@
         {
             rodzaj: 'Krzesło',
             material: 'Dąb',
-            kolor: 'czarny',
+            kolor: 'Czarny',
             Mebel_wyswietl_dabrowski: function () 
             {
                 document.write(this.rodzaj +', '+ this.material +', '+ this.kolor)
