--- a/z26.html
+++ b/z26.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         var Mebel =
         {
-            rodzaj: 'Krzesło',
+            rodzaj: 'Biurko',
             material: 'Dąb',
             kolor: 'Czarny',
             Mebel_wyswietl_dabrowski: function () 
