--- a/k26.html
+++ b/k26.html
@@ -26,7 +26,7 @@
     <script type="text/javascript">
         var Mebel =
         {
-            rodzaj: 'Krzesło',
+            rodzaj: 'Biurko',
             material: 'Dąb',
             kolor: 'Czarny',
             Mebel_wyswietl_dabrowski: function () 
