--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="img/D4BB3K.png">
 	<link rel="stylesheet" type="text/css" href="style.css/index.css">
 	<script type="text/javascript">
 		function WinOpen_dabrowski_1() {
