--- a/k24.html
+++ b/k24.html
@@ -8,7 +8,8 @@
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Kod do zadania 24">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css/kody.css">
+	<link rel="icon" type="image/x-icon" href="img/Kod.png">
+    <link rel="stylesheet" type="text/css" href="style.css/kody.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 24">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
 </head>
 
 <body>
