--- a/z27.html
+++ b/z27.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 27">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
     <script type="text/javascript">
         var Mebel =
         {
