--- a/k25.html
+++ b/k25.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Kod do zadania 25">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Kod.png">
 	<link rel="stylesheet" type="text/css" href="style.css/kody.css">
 </head>
 
@@ -23,6 +24,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 25">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
 </head>
 
 <body>
