--- a/k28.html
+++ b/k28.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Kod do zadania 28">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Kod.png">
 	<link rel="stylesheet" type="text/css" href="style.css/kody.css">
 </head>
 
@@ -23,6 +24,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 28">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
     <script type="text/javascript">
         function Mebel(rodzaj_k, material_k, kolor_k, dlugosc_k) //początek konstruktora
         {
