--- a/z25.html
+++ b/z25.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 25">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
 </head>
 
 <body>
