--- a/z28.html
+++ b/z28.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Jakub Dąbrowski">
     <meta name="description" content="Zadanie 28">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/Zadanie.png">
     <script type="text/javascript">
         function Mebel(rodzaj_k, material_k, kolor_k, dlugosc_k) //początek konstruktora
         {
