--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 	<title>Zadania 24-28</title>
 	<meta name="author" content="Jakub Dąbrowski">
 	<meta name="description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="img/D4BB3K.png">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta property="og:title" content="Strona zaliczeniowa">
+    <meta property="og:site_name" content="Zadania 24-28">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://d4bb3k.github.io/PWIA/">
+    <meta property="og:image" content="img/D4BB3K.png">
+	<link rel="shortcut icon" type="image/x-icon" href="img/D4BB3K.png">
 	<link rel="stylesheet" type="text/css" href="style.css/index.css">
 	<script type="text/javascript">
 		function WinOpen_dabrowski_1() {
