--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:title" content="Strona zaliczeniowa">
     <meta property="og:site_name" content="Zadania 24-28">
     <meta property="og:type" content="website">
+	<meta property="og:description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
     <meta property="og:url" content="https://d4bb3k.github.io/PWIA/">
     <meta property="og:image" content="img/D4BB3K.png">
 	<link rel="shortcut icon" type="image/x-icon" href="img/D4BB3K.png">
