--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
 	<meta property="og:description" content="Zadania 24-28 na Pracownie programowania witryn i aplikacji by Marek Kryniewski">
     <meta property="og:url" content="https://d4bb3k.github.io/PWIA/">
-    <meta property="og:image" content="file:img/D4BB3K.png">
+    <meta property="og:image" content="https://i.imgur.com/bhgFbMJ.png">
 	<link rel="shortcut icon" type="image/x-icon" href="img/D4BB3K.png">
 	<link rel="stylesheet" type="text/css" href="style.css/index.css">
 	<script type="text/javascript">
