--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="Zadania 24-28">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://d4bb3k.github.io/PWIA/">
-    <meta property="og:image" content="https://i.imgur.com/bhgFbMJ.png">
+    <meta property="og:image" content="https://i.imgur.com/c1LRcp1.png">
 	<link rel="shortcut icon" type="image/x-icon" href="img/D4BB3K.png">
 	<link rel="stylesheet" type="text/css" href="style.css/index.css">
 	<script type="text/javascript">
